k8s/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  namespace: chat-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: matheusgon/chat-back:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: chat-namespace
spec:
  selector:
    app: back
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
